fix aggReport layout and implement overflow-y: auto

--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -917,5 +917,12 @@ label {
     }
 }
 
+@media screen and (max-width : 1024px) {
+    .mobile-topbot10 {
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+}
+
 
 
